--- a/libs/shared/components/tsconfig.json
+++ b/libs/shared/components/tsconfig.json
@@ -1,18 +1,13 @@
 {
   "extends": "../../../tsconfig.base.json",
-  "compilerOptions": {
-    "experimentalDecorators": true,
-    "types": ["node", "jest"]
-  },
   "files": [],
   "include": [],
   "references": [
     {
-      "path": "./tsconfig.app.json"
+      "path": "./tsconfig.lib.json"
     },
     {
       "path": "./tsconfig.spec.json"
     }
-  ],
-
+  ]
 }
