--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,11 +18,15 @@
     "paths": {
       "@tmo/shared/styles": ["libs/shared/styles/src/index.ts"],
       "@tmo/shared/models": ["libs/shared/models/src/index.ts"],
-      "@tmo/books/feature": ["libs/books/feature/src/index.ts"],
+      "@tmo/books/feature-search": ["libs/books/feature-search/src/index.ts"],
       "@tmo/books/data-access": ["libs/books/data-access/src/index.ts"],
       "@tmo/shared/storage": ["libs/shared/storage/src/index.ts"],
       "@tmo/shared/testing": ["libs/shared/testing/src/index.ts"],
-      "@tmo/api/books": ["libs/api/books/src/index.ts"]
+      "@tmo/api/books": ["libs/api/books/src/index.ts"],
+      "@tmo/books/ui": ["libs/books/ui/src/index.ts"],
+      "@tmo/books/portal": ["libs/books/portal/src/index.ts"],
+      "@tmo/shared/components": ["libs/shared/components/src/index.ts"],
+      "@tmo/shared/frame": ["libs/shared/frame/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
