--- a/nx.json
+++ b/nx.json
@@ -65,6 +65,9 @@
     },
     "shared-frame": {
       "tags": []
+    },
+    "books-feature-details": {
+      "tags": []
     }
   },
   "affected": {
